--- a/UILayer/Views/TourList.xaml
+++ b/UILayer/Views/TourList.xaml
@@ -7,6 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
+        <!-- List containing all Tours -->
         <ListView ItemsSource="{Binding Tours}"
                   SelectedItem="{Binding SelectedTour, Mode=TwoWay}" 
                   Background="Transparent"
