--- a/UILayer/Views/TourLogsManagement.xaml
+++ b/UILayer/Views/TourLogsManagement.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TourPlanner.UILayer.Views"
+             xmlns:views="clr-namespace:TourPlanner.UILayer.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -18,13 +18,13 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            
+
             <TextBlock Text="Tour Logs"
-                      Margin="10,5"
-                      Foreground="White"
-                      FontSize="16"
-                      FontWeight="SemiBold"
-                      VerticalAlignment="Center"/>
+                       Margin="10,5"
+                       Foreground="White"
+                       FontSize="16"
+                       FontWeight="SemiBold"
+                       VerticalAlignment="Center"/>
 
             <StackPanel Grid.Column="1"
                        Orientation="Horizontal"
@@ -37,7 +37,7 @@
                         Background="Transparent"
                         Foreground="White"
                         BorderThickness="0"
-                        Command="{Binding CreateTourLogCommand}"/>
+                        Command="{Binding DataContext.CreateTourLogCommand, RelativeSource={RelativeSource AncestorType=Window}}"/>
                 <Button Content="-"
                         Width="24"
                         Height="24"
@@ -56,91 +56,9 @@
                         Command="{Binding EditTourLogCommand}"/>
             </StackPanel>
         </Grid>
-
-        <!-- Tour Logs Table -->
-        <ListView Grid.Row="1" 
-                  ItemsSource="{Binding TourLogs}"
-                  SelectedItem="{Binding SelectedTourLog, Mode=TwoWay}"
-                  Background="#F5F5F5"
-                  BorderThickness="0"
-                  Margin="0"
-                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                  AlternationCount="2">
-            <ListView.Resources>
-                <Style TargetType="GridViewColumnHeader">
-                    <Setter Property="Background" Value="#9CCB19"/>
-                    <Setter Property="Foreground" Value="White"/>
-                    <Setter Property="Height" Value="30"/>
-                    <Setter Property="Padding" Value="10,0"/>
-                    <Setter Property="BorderThickness" Value="0,0,1,0"/>
-                    <Setter Property="BorderBrush" Value="#89B717"/>
-                </Style>
-            </ListView.Resources>
-            
-            <ListView.View>
-                <GridView>
-                    <!-- Date Column -->
-                    <GridViewColumn Header="Date" Width="150">
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding Date, StringFormat=dd.MM.yyyy}"
-                                         Margin="10,5"
-                                         VerticalAlignment="Center"/>
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-
-                    <!-- Duration Column -->
-                    <GridViewColumn Header="Duration" Width="150">
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock Margin="10,5" VerticalAlignment="Center">
-                                    <Run Text="{Binding TotalTime, StringFormat=hh}"/>
-                                    <Run Text=" : "/>
-                                    <Run Text="{Binding TotalTime, StringFormat=mm}"/>
-                                </TextBlock>
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-
-                    <!-- Distance Column -->
-                    <GridViewColumn Header="Distance" Width="150">
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock Margin="10,5" VerticalAlignment="Center">
-                                    <Run Text="{Binding TotalDistance, StringFormat=F1}"/>
-                                    <Run Text=" km"/>
-                                </TextBlock>
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-                </GridView>
-            </ListView.View>
-            
-            <ListView.ItemContainerStyle>
-                <Style TargetType="ListViewItem">
-                    <Setter Property="Height" Value="35"/>
-                    <Setter Property="Background" Value="White"/>
-                    <Setter Property="BorderThickness" Value="0"/>
-                    <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-                    <Setter Property="VerticalContentAlignment" Value="Stretch"/>
-                    <Style.Triggers>
-                        <Trigger Property="ItemsControl.AlternationIndex" Value="1">
-                            <Setter Property="Background" Value="#E8E8E8"/>
-                        </Trigger>
-                        <Trigger Property="IsSelected" Value="True">
-                            <Setter Property="Background" Value="#CCE8FF"/>
-                        </Trigger>
-                        <MultiTrigger>
-                            <MultiTrigger.Conditions>
-                                <Condition Property="IsMouseOver" Value="True"/>
-                                <Condition Property="IsSelected" Value="False"/>
-                            </MultiTrigger.Conditions>
-                            <Setter Property="Background" Value="#F0F0F0"/>
-                        </MultiTrigger>
-                    </Style.Triggers>
-                </Style>
-            </ListView.ItemContainerStyle>
-        </ListView>
+        
+        <!--- Tour Logs Table -->
+        <views:TourLogList Grid.Row="1"
+                           DataContext="{Binding TourLogListViewModel}"/>
     </Grid>
 </UserControl>
