--- a/UILayer/Views/TourManagement.xaml
+++ b/UILayer/Views/TourManagement.xaml
@@ -6,7 +6,7 @@
              xmlns:views="clr-namespace:TourPlanner.UILayer.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="300">
-    
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -14,6 +14,8 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
+        <Grid Grid.Row="0" Background="#0078D7"></Grid>
+        
         <!-- Header with Title and Buttons -->
         <TextBlock Grid.Row="0" 
                    Text="Tours"
@@ -26,25 +28,28 @@
                    MaxHeight="35"/>
 
         <!-- Buttons for Tour management -->
-        <StackPanel Grid.Row="0" 
+        <StackPanel Grid.Row="0"
                     HorizontalAlignment="Right"
                     VerticalAlignment="Center"
                     Orientation="Horizontal"
                     MaxHeight="35"
                     Width="Auto">
             <Button Content="+"
+                    Background="#9CCB19"
                     Foreground="Black"
                     FontSize="18"
                     MinWidth="30"
                     VerticalContentAlignment="Center"
                     Command="{Binding CreateTourCommand}"/>
             <Button Content="-"
+                    Background="#9CCB19"
                     Foreground="Black"
                     MinWidth="30"
                     FontSize="18"
                     VerticalContentAlignment="Center"
                     Command="{Binding DeleteTourCommand}"/>
             <Button Content="..."
+                    Background="#9CCB19"
                     Foreground="Black"
                     MinWidth="30"
                     FontSize="18"
@@ -59,6 +64,7 @@
         <!-- Tour List -->
         <views:TourList x:Name="TourListView" 
                         Grid.Row="2"
+                        Background="White"
                         DataContext="{Binding TourListViewModel}"/>
 
     </Grid>
